@@ -6,9 +6,8 @@ import java.security.Key;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
+import java.util.Base64;
 public class Encriptar {
 	
 	private static final String alg="AES";
@@ -24,7 +23,9 @@ public class Encriptar {
 		Cipher c = Cipher.getInstance(alg);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal =  c.doFinal(Data.getBytes());
-		String encryptedValue = new BASE64Encoder().encode(encVal);
+		
+		String encryptedValue = Base64.getEncoder().encodeToString(encVal);
+		//String encryptedValue = new BASE64Encoder().encode(encVal);
 		return encryptedValue;
 	}
 	
@@ -32,7 +33,8 @@ public class Encriptar {
 		Key key = generateKey();
 		Cipher c = Cipher.getInstance(alg);
 		c.init(Cipher.DECRYPT_MODE, key);
-		byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+		
+		byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
 		byte[] decValue = c.doFinal(decordedValue);
 		String decryptedValue = new String(decValue);
 		return decryptedValue;
